🚀 2단계 - QueryBuilder DDL (#174)
* docs: add step2 requirements

* feat: add Person

* test(QueryBuilder): createQuery 테스트 작성

* feat(QueryBuilder): 요구사항1 create쿼리 만들기

* feat(step2-2): Person객체 변경

* test(QueryBuilder): createQuery 테스트 수정

* feat(Column): Column 유닛 테스트 적용

* feat(H2Column): Column 이름 변경 및 annotation name 적용

* refactor(H2Column): ColumnName 추출 로직

* feat(H2Column): Nullable, ColumnType, generateSQL 추가

* feat(H2Column): PK GenerationType 추가

* refactor(queryBuilder): H2 Columns 일급컬렉션 사용

* docs(step2-2): 요구사항 완료

* feat(step2-3): Person객체 변경

* feat(QueryBuilder): Transient처리

* feat(step2-3): Table명 변경 기능구현완료

* feat(step2-4): drop table 기능구현완료

* refactor(QueryBuilder): 생성자 변경 및 Application 코드 적용

* refactor(Nullable): annotaion값 추출 로직 enum으로 이동

* refactor(PKGenerationType): annotaion값 추출 로직 enum으로 이동

* refactor(ColumnName): annotaion값 추출 로직 enum으로 이동

* refactor(DataType): annotaion값 추출 로직 enum으로 이동

* refactor(TableName): annotaion값 추출 로직 enum으로 이동

* refactor(QueryBuilder): interface 추출 및 패키지 재정리

* fix: test

* refactor: QueryBuilder 구현체 로직 정리

* style: end of file 개행 정리 및 IDEA 기본 CodeFormatter로 변경

* style: end of file 개행 정리 및 IDEA 기본 CodeFormatter로 변경

* refactor: 컬럼의 dataType, nullable 정보 dialect에 등록 및 사용

* move: dialect관련 패키지 ddl 외부로 이동 및 CreateTable DDL 변경

* refactor: PK GenerationType 도 Dialect로 이동

* move: dialect관련 패키지 ddl내부로 이동

* refactor(dialect): interface 적용

* test: Dialect 관련 테스트 추가 및 테스트 패키지 이동