@@ -9,6 +9,7 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -29,7 +30,7 @@ public class ReflectionTest {
         // 모든 필드 목록
         List<String> fields = Arrays.stream(carClass.getDeclaredFields())
                 .map(Field::toString)
-                .toList();
+                .collect(Collectors.toList());
         assertThat(fields).contains(
                 "private java.lang.String persistence.study.Car.name",
                 "private int persistence.study.Car.price"
@@ -38,7 +39,7 @@ public class ReflectionTest {
         // 모든 생성자 반환
         List<String> constructors = Arrays.stream(carClass.getDeclaredConstructors())
                 .map(Constructor::toString)
-                .toList();
+                .collect(Collectors.toList());
         assertThat(constructors).contains(
                 "public persistence.study.Car()",
                 "public persistence.study.Car(java.lang.String,int)"
@@ -47,7 +48,7 @@ public class ReflectionTest {
         // 모든 메서드 반환
         List<String> methods = Arrays.stream(carClass.getDeclaredMethods())
                 .map(Method::toString)
-                .toList();
+                .collect(Collectors.toList());
         assertThat(methods).contains(
                 "public java.lang.String persistence.study.Car.getName()",
                 "public void persistence.study.Car.printView()",
@@ -64,7 +65,7 @@ public class ReflectionTest {
 
         List<Method> startWithTestMethods = Arrays.stream(carClass.getDeclaredMethods())
                 .filter(method -> method.getName().startsWith("test"))
-                .toList();
+                .collect(Collectors.toList());
         for (final Method method : startWithTestMethods) {
             method.invoke(mockCar);
         }
@@ -82,7 +83,7 @@ public class ReflectionTest {
 
         List<Method> annotationMethods = Arrays.stream(carClass.getDeclaredMethods())
                 .filter(method -> method.isAnnotationPresent(PrintView.class))
-                .toList();
+                .collect(Collectors.toList());
         for (final Method method : annotationMethods) {
             method.invoke(mockCar);
         }
